--- a/views/index.ejs
+++ b/views/index.ejs
@@ -181,18 +181,16 @@
         </div>
 
         
-        <audio
+        <!-- <audio
           src="/stream/2065347cdc4a6582c5318b6ab68c2dec0551a53c"
           controls
-        ></audio>
+        ></audio> -->
       </div>
 
        
       <div class="playmusic">
         <div class="playcontent">
-          <img
-            src="/poster/2065347cdc4a6582c5318b6ab68c2dec0551a53cposter"
-            alt=""
+         
           />
         </div>
         <div class="playtext">
