--- a/views/playlist.ejs
+++ b/views/playlist.ejs
@@ -111,10 +111,10 @@
           <% }) %>
         </div>
 
-        <audio
+        <!-- <audio
           src="/stream/2065347cdc4a6582c5318b6ab68c2dec0551a53c"
           controls
-        ></audio>
+        ></audio> -->
       </div>
     </div>
   </body>
