--- a/views/search.ejs
+++ b/views/search.ejs
@@ -36,10 +36,10 @@
     <div class="right" style="width: 100%">
       <div class="musics"></div>
     </div>
-    <audio
+    <!-- <audio
       src="/stream/2065347cdc4a6582c5318b6ab68c2dec0551a53c"
       controls
-    ></audio>
+    ></audio> -->
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.0/axios.min.js"
