--- a/views/playlist.ejs
+++ b/views/playlist.ejs
@@ -111,10 +111,10 @@
           <% }) %>
         </div>
 
-        <!-- <audio
-          src="/stream/2065347cdc4a6582c5318b6ab68c2dec0551a53c"
+        <audio
+          src="/stream/4c531168993ecc936e580c273f3cf4779280cf91"
           controls
-        ></audio> -->
+        ></audio>
       </div>
     </div>
   </body>
